packages/typ/tests/fixtures/diagnostics/0661_fcm_pack_with_type_mismatch_01.ml.infer.expected
File "0661_fcm_pack_with_type_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0661_fcm_pack_with_type_mismatch_01 is not a valid module name.

File "0661_fcm_pack_with_type_mismatch_01.ml", line 11, characters 16-23:
11 | let _ = (module M_alpha : Box_alpha with type t = bool)
                     ^^^^^^^
Error: This expression has type (module Box_alpha with type t = bool)
       but an expression was expected of type
         (module Box_alpha with type t = M_alpha.t)
       Type bool is not compatible with type M_alpha.t = int
